# MyProject

./: CMakeLists.txt  Doxyfile.in  main.cpp
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html
docs/html/d1/ded/: factorial_8h.html  factorial_8h_source.html
docs/html/d3/dbb/: palindrome_8h_source.html
docs/html/da/d98/: fibonacci_8h.html  fibonacci_8h_source.html
docs/html/dd/d99/: prime_8h_source.html
docs/html/df/d07/: example__class_8h_source.html
docs/html/search/: files_0.js  searchdata.js
docs/latex/: files.tex  refman.tex
docs/latex/d1/ded/: factorial_8h.tex  factorial_8h_source.tex
docs/latex/d3/dbb/: palindrome_8h_source.tex
docs/latex/da/d98/: fibonacci_8h.tex  fibonacci_8h_source.tex
docs/latex/dd/d99/: prime_8h_source.tex
docs/latex/df/d07/: example__class_8h_source.tex
include/: factorial.h  fibonacci.h
src/: CMakeLists.txt  factorial.cpp  fibonacci.cpp  palindrome.cpp
tests/: CMakeLists.txt  test_factorial.cpp  test_fibonacci.cpp
